--- a/css/styles.css
+++ b/css/styles.css
@@ -100,7 +100,7 @@
 
 .education-skill-row {
   line-height: 2;
-  margin: auto 25% auto 19%;
+  margin: auto 24.625rem auto 24.625rem;
   width: 60%;
   text-align: center;
 }
