--- a/css/styles.css
+++ b/css/styles.css
@@ -100,7 +100,7 @@
 
 .education-skill-row {
   line-height: 2;
-  margin: auto 24.623rem auto 24.623rem;
+  margin: auto 24.625rem auto 24.625rem;
   width: 60%;
   text-align: center;
 }
@@ -300,7 +300,7 @@
    padding: 0 20px;
    font-size: 1rem;
    text-align: center;
-   color: #66BFBF;
+   color: black;
    text-shadow: 1px 1px 1px #000;
    border-radius: 10px;
    background-color: white;
@@ -323,6 +323,10 @@
 .mX{
   display: inline-table;
   margin-left: 70px;
+}
+
+.p-colour{
+  color: white;
 }
 
 /**************************** Key Frames ****************************/
